--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,19 @@
     padding: 0;
 
     border: 1px solid black;
- }
+}
 
 header{
     display: flex;
     justify-content: space-around;
     padding: 1em;
+    background-color: lightcyan;
 }
 
+.hero{
+    background-color: lightcyan;
+    height: 300px;
+}
 .flex-ul{
     list-style-type: none;
 }
@@ -25,7 +30,6 @@ header{
 
 nav ul{
     display: flex;
-    
 }
 
 nav ul li{
@@ -56,7 +60,7 @@ div h1, p {
 .download-links ul li a {
     text-decoration: none;
     background-color: lightblue;
-    border-radius: 15px;
+    border-radius: 35%;
     padding: 10px;
 }
 
@@ -66,11 +70,22 @@ div h1, p {
     /* flex-direction: row-reverse; */
 }
 
-.right-text, figure{
+.text, figure{
     flex-basis: 40%;
     padding-inline: 5em;
 }
 
-.right-text{
+.text{
+    text-align: center;
+}
+
+.download-links a{
+    text-decoration: none;
+    background-color: lightblue;
+    border-radius: 35%;
+    padding: 10px;
+}
+
+.ending-section{
     text-align: center;
 }
