--- a/assets/style.css
+++ b/assets/style.css
@@ -3,9 +3,11 @@
     margin: 0;
     padding: 0;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
-
+body {
+    padding: 5em;
+}
 header{
     display: flex;
     justify-content: space-around;
@@ -17,6 +19,14 @@ header{
     background-color: #0fd7cd;
     height: 300px;
 }
+
+li{
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
+}
+
 .flex-ul{
     list-style-type: none;
 }
@@ -28,11 +38,11 @@ header{
     justify-content: center;
 }
 
-nav ul{
+.nav-links ul{
     display: flex;
 }
 
-nav ul li{
+.nav-links ul li{
     list-style-type: none;
     padding-inline: 1em;
 }
@@ -50,7 +60,6 @@ div h1, p {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    list-style-type: none;
 }
 
 .download-links ul li{
@@ -58,7 +67,6 @@ div h1, p {
 }
 
 .download-links ul li a {
-    text-decoration: none;
     background-color: lightblue;
     border-radius: 35%;
     padding: 10px;
@@ -67,7 +75,6 @@ div h1, p {
 .section{
     display: flex;
     justify-content: space-between;
-    /* flex-direction: row-reverse; */
 }
 
 .text, figure{
@@ -94,34 +101,18 @@ figure{
     text-align: center;
 }
 
-footer{
-    display: flex;
-    justify-content: space-between;
-}
 .footer-nav{
-    display: flex; 
-}
-
-.footer-nav div ul{
+    display: flex;
     justify-content: space-between;
+    flex-direction: row;
+}
+
+.menu-title{
+    color: #817CE2;
+}
+
+.register{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    padding: 5%;
 }
-
-#language{
-    width: 100px;
-    height: 50px;
-}
-
-.footer-nav div ul li{
-    list-style-type: none;
-    
-}
-
-/* .footer-nav div{
-    display: flex;
-    flex-basis: 30%;
-} */
-
-
-
